--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.0.4",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "custom-cursor-react": "^1.0.5",
+    "gsap": "^3.9.1",
     "next": "^11.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
