--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-burger-menu": "^3.0.6",
     "react-card-flipper": "^1.0.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
